force-app/main/default/objects/Contact_Document__c.object
<CustomObject>
    <fields>
        <fullName>API_Request__c</fullName>
        <description>Field created to capture the api request for the related file record</description>
        <label>API Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>field creted to capture the response for the related file record submitted to callista</description>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>TEXT(Application__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to application record if relevant</description>
        <inlineHelpText>Link to application record if relevant</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archive_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Files associated with this Contact Document are ready for archiving</description>
        <inlineHelpText>Files associated with this Contact Document are ready for archiving</inlineHelpText>
        <label>Archive Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_Document_Id__c</fullName>
        <description>Document Id returned from Callista Document Upsert API</description>
        <label>Callista Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Informational attribute indicating the channel through which the document was delivered</description>
        <inlineHelpText>Informational attribute indicating the channel through which the document was delivered</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Digitary Inbox</fullName>
                </value>
                <value>
                    <fullName>CHESICC</fullName>
                </value>
                <value>
                    <fullName>CSSD</fullName>
                </value>
                <value>
                    <fullName>Digitary Wallet</fullName>
                    <isActive>false</isActive>
                    <label>Digitary Wallet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Qualification</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There are no Qualifications assigned to this contact</errorMessage>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Contact_Qualification__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact_Qualification__c</referenceTo>
        <relationshipLabel>Qualification Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Document_Assessment_Status__c</fullName>
        <description>Select -- None -- if document is good. Select Not Required if document is not required for assessment. Select Not Assessable for requesting new copy of the document.</description>
        <inlineHelpText>Select &apos;-- None --&apos; if document is good.
Select &apos;Not Required&apos; if document is not required for assessment.
Select &apos;Not Assessable&apos; for requesting new copy of the document.</inlineHelpText>
        <label>Document Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Not Assessable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Checklist_Type_F__c</fullName>
        <formula>TEXT(Document_Checklist__r.Type__c)</formula>
        <label>Document Checklist Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate which checklist item the document was uploaded against.</description>
        <label>Document Checklist</label>
        <referenceTo>Document_Checklist__c</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Owner_Mismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether there is a potential mismatch between the issuer document owner and the CRM contact.</description>
        <inlineHelpText>This field indicates whether there is a potential mismatch between the issuer document owner and the CRM contact.</inlineHelpText>
        <label>Document Owner Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field created to update the status whether the docuemnt was updated successfully or failed</description>
        <label>Document Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <label>Document Type Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Attachment_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email Attachment Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>File_Upload_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>triggering field for callout to callista for files</description>
        <label>File Upload Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_API_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked via Process Builder &quot;AA - ADP Processes&quot; if there is at least 1 generated request from its child Application Document Provided records</description>
        <label>Has API Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_API_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked via Process Builder &quot;AA - ADP Processes&quot; if there is at least 1 response from Callista from its child Application Document Provided records</description>
        <label>Has API Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inception_Date__c</fullName>
        <description>The date when the document is shared by the institution in Digitary.</description>
        <inlineHelpText>The date when the document is shared by the institution in Digitary.</inlineHelpText>
        <label>Original Institution Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to flag if the document should only be visible internally</description>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuer_Delivery_Id__c</fullName>
        <description>The original batch Id for the delivery. Can be used again when issuer update or revoke documents.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original batch Id for the delivery. Can be used again when issuer update or revoke documents.</inlineHelpText>
        <label>Issuer Delivery Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Document_Id__c</fullName>
        <description>The original document Id in the delivery batch. Can be used again when issuer update or revoke documents.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original document Id in the delivery batch. Can be used again when issuer update or revoke documents.</inlineHelpText>
        <label>Issuer Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Document_Owner_Email__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Issuer defined document owner email address</description>
        <inlineHelpText>Issuer defined document owner email address</inlineHelpText>
        <label>Issuer Document Owner Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Document_Owner_Name__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Issuer defined document owner name</description>
        <inlineHelpText>Issuer defined document owner name</inlineHelpText>
        <label>Issuer Document Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Document_Type__c</fullName>
        <description>Issuer defined document type</description>
        <inlineHelpText>Issuer defined document type</inlineHelpText>
        <label>Issuer Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuer_Name__c</fullName>
        <description>The name of the institution or organisation that issued the document to the document owner</description>
        <inlineHelpText>The name of the institution or organisation that issued the document to the document owner</inlineHelpText>
        <label>Issuer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_sync_date_time__c</fullName>
        <description>Last sync to callista date/time for retry</description>
        <label>Last sync date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Post_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if this field and Submitted are both true, it will fire off a Process Builder to submit the document to Callista</description>
        <inlineHelpText>if this field and Submitted are both true, it will fire off a Process Builder to submit the document to Callista</inlineHelpText>
        <label>Post Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Power_of_One_F__c</fullName>
        <description>Dummy field holding the value of 1 for each record to assist with reporting
    https://www.salesforce.com/video/296533/</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks to see if the document has been submitted or not.</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sync to Callista In Progress for retry</description>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certified name change documents uploaded with the on-line graduation application.</fullName>
                </value>
                <value>
                    <fullName>Certified previous qualification documents uploaded with the on-line graduation application.</fullName>
                </value>
                <value>
                    <fullName>Course offer acceptance document</fullName>
                </value>
                <value>
                    <fullName>Credit application</fullName>
                </value>
                <value>
                    <fullName>Curriculum vitae</fullName>
                </value>
                <value>
                    <fullName>Diploma or degree certificate</fullName>
                </value>
                <value>
                    <fullName>Employment reference</fullName>
                </value>
                <value>
                    <fullName>HDR application summary</fullName>
                </value>
                <value>
                    <fullName>Higher Degree Research candidature offer or confirmation letter.</fullName>
                </value>
                <value>
                    <fullName>Image of artwork for Art and Design folio</fullName>
                </value>
                <value>
                    <fullName>Invitation Letter for Higher Dreams Application</fullName>
                </value>
                <value>
                    <fullName>Learning Portfolio</fullName>
                </value>
                <value>
                    <fullName>Open Universities exams special local invigilator verification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other document type not listed</fullName>
                </value>
                <value>
                    <fullName>Prior Application details for HDR</fullName>
                </value>
                <value>
                    <fullName>Proof of change of name</fullName>
                </value>
                <value>
                    <fullName>Proof of Citizenship/Residency or Identity</fullName>
                </value>
                <value>
                    <fullName>Proof of employment</fullName>
                </value>
                <value>
                    <fullName>Proof of English language medium of instruction</fullName>
                </value>
                <value>
                    <fullName>Proof of professional registration</fullName>
                </value>
                <value>
                    <fullName>Research proposal</fullName>
                </value>
                <value>
                    <fullName>Results forecast from secondary school</fullName>
                </value>
                <value>
                    <fullName>Results from secondary school</fullName>
                </value>
                <value>
                    <fullName>Results from tertiary studies</fullName>
                </value>
                <value>
                    <fullName>Results of aptitude test</fullName>
                </value>
                <value>
                    <fullName>Results of English language test</fullName>
                </value>
                <value>
                    <fullName>Statement of Purpose</fullName>
                </value>
                <value>
                    <fullName>Unit outline from tertiary studies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_File_Name__c</fullName>
        <description>Used as external id for relating content versions</description>
        <externalId>true</externalId>
        <inlineHelpText>Used as external id for relating content versions</inlineHelpText>
        <label>Unique File Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to ‘True’ when document is from verified credential provider</description>
        <inlineHelpText>Set to ‘True’ when document is from verified credential provider</inlineHelpText>
        <label>Digitally Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Experience__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to work experience record if relevant</description>
        <inlineHelpText>Link to work experience record if relevant</inlineHelpText>
        <label>Work Experience</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No work experience records assigned to the contact.</errorMessage>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Work_Experience__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Experience__c</referenceTo>
        <relationshipLabel>Contact Documents</relationshipLabel>
        <relationshipName>Contact_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Filename__c</columns>
        <columns>Email_Attachment_Id__c</columns>
        <columns>File_Upload_Successful__c</columns>
        <columns>Document_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Post_Submission__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CNDC-{000000}</displayFormat>
        <label>Contact Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>